--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 display: grid;
                 grid-template-columns: 1fr 1fr;
             }
-        }
+            }
         
-        @media all and (max-width: 720px) {
+            @media all and (max-width: 720px) {
             body{
                 background-color:red;
             }
@@ -32,9 +32,18 @@
         </style>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FZ7XFKDV9C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FZ7XFKDV9C');
+</script>
     </head>
     <body>
         <h1>
